<resources>
    <string name="app_name">FormaGym</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_member">New Member?</string>
    <string name="add">Add</string>
    <string name="actives_section">Active</string>
    <string name="inactive_subs">Inactive</string>
    <string name="subscription_start">Subscription Start</string>
    <string name="subscription_end">Subscription End</string>
    <string name="no_subscribers">There are no subscribers</string>
    <string name="take_photo">Capture Photo</string>
    <string name="clear_photo">Clear Photo</string>
    <string name="susbscriber_name">Susbscriber Name</string>
    <string name="month">Month</string>
    <string name="_2_months">2 Months</string>
    <string name="_3_months">3 Months</string>
    <string name="or">or</string>
    <string name="manual_date">Enter Date Manually</string>
    <string name="save">Save</string>
    <string name="error_message">Name or Date cannot be empty</string>
    <string name="sub_duration">Subscription Duration</string>
    <string name="delete_member">"You are about to delete "</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sub_finish">Subscription has ended</string>
    <string name="image">image</string>
    <string name="half_month">15 Days</string>
    <string name="income">Income</string>
    <string name="total_income">Total Income</string>
    <string name="le">LE</string>
    <string name="none">-1</string>
    <string name="pricing">Enter Total Cost</string>
    <string name="avg_income">Average Income</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_average">Average Calculator</string>
    <string name="edit_details">Edit Details</string>
    <string name="payments">Payments</string>
    <string name="average">Average</string>
    <string name="total">Total</string>
    <string name="renew_subscription">Renewal</string>


</resources>