<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
       >


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/payments_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/total_income"
                android:textColor="#F0EFF4"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/avg_income"
                android:textColor="#F0EFF4"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/total_income_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textColor="@color/gold"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                app:layout_constraintVertical_bias="1.0"
                tools:text="26548" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/le"
                android:textColor="@color/gold"
                android:textSize="@dimen/_14ssp"
                android:layout_margin="@dimen/_5sdp"
                android:typeface="monospace"
                app:layout_constraintBaseline_toBaselineOf="@+id/total_income_tv"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/avg_income_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textColor="@color/gold"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="1.0"
                tools:text="26548" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginEnd="4dp"
                android:text="@string/le"
                android:textColor="@color/gold"
                android:textSize="@dimen/_14ssp"
                android:typeface="monospace"
                app:layout_constraintBaseline_toBaselineOf="@+id/avg_income_tv"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>