<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.formagym.ui.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:context=".ui.details.DetailsFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/boxes_margin"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/boxes_margin"
                app:cardBackgroundColor="@color/gold"
                app:cardCornerRadius="@dimen/boxes_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/member_photo_details"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/ic_baseline_person_24"
                        app:civ_circle_background_color="#783D3B3B"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/take_photo_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_12sdp"
                        android:text="@string/take_photo"
                        android:textAllCaps="false"
                        app:backgroundTint="@color/grey"
                        app:cornerRadius="@dimen/button_radius"
                        app:icon="@drawable/ic_baseline_camera_alt_24"
                        app:iconGravity="textEnd"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/member_photo_details" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/clear_photo_btn"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_photo"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="@+id/take_photo_btn"
                        app:layout_constraintStart_toStartOf="@+id/take_photo_btn"
                        app:layout_constraintTop_toBottomOf="@+id/take_photo_btn" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/member_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/boxes_margin"
                app:cardBackgroundColor="@color/gold"
                app:cardCornerRadius="@dimen/boxes_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo_layout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        app:boxBackgroundColor="@color/grey"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="@dimen/button_radius"
                        app:boxCornerRadiusBottomStart="@dimen/button_radius"
                        app:boxCornerRadiusTopEnd="@dimen/button_radius"
                        app:boxCornerRadiusTopStart="@dimen/button_radius"
                        app:boxStrokeColor="@color/grey"
                        app:hintTextColor="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/member_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="#423D3B3B"
                            android:fontFamily="@font/sego_semibold"
                            android:gravity="top"
                            android:hint="@string/susbscriber_name"
                            android:inputType="textCapWords"
                            android:paddingBottom="15dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/grey"
                            tools:text="Muhammed Salman" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RadioGroup
                        android:id="@+id/sub_duration_rg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sub_1_month"
                            style="@style/subscribe_month_rb"
                            android:text="@string/month"
                            tools:checked="true" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sub_2_month"
                            style="@style/subscribe_month_rb"
                            android:text="@string/_2_months" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sub_3_month"
                            style="@style/subscribe_month_rb"
                            android:text="@string/_3_months" />
                    </RadioGroup>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:background="#633D3B3B"
                        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/sub_duration_rg"
                        app:layout_constraintTop_toTopOf="@+id/textView" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"
                        android:background="#633D3B3B"
                        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                        app:layout_constraintEnd_toEndOf="@+id/sub_duration_rg"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        app:layout_constraintVertical_bias="0.548" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/or"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sub_duration_rg" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="9dp"
                        android:theme="@style/et_style"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="@dimen/button_radius"
                        app:boxCornerRadiusBottomStart="@dimen/button_radius"
                        app:boxCornerRadiusTopEnd="@dimen/button_radius"
                        app:boxCornerRadiusTopStart="@dimen/button_radius"
                        app:boxStrokeColor="@color/grey"
                        app:hintTextColor="@color/grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sub_duration_manual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#423D3B3B"
                            android:enabled="true"
                            android:focusable="false"
                            android:fontFamily="@font/sego_semibold"
                            android:gravity="top|center"
                            android:hint="@string/manual_date"
                            android:inputType="textCapWords"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp"
                            tools:text="18 Feb, 2022" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/sego_semibold"
                        android:text="@string/sub_duration"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:padding="@dimen/_12sdp"
                android:text="@string/save"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@color/gold"
                app:cornerRadius="@dimen/button_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/member_details"
                app:layout_constraintStart_toStartOf="@+id/member_details"
                app:layout_constraintTop_toBottomOf="@+id/member_details" />

            <ImageView
                android:id="@+id/remove_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_delete_24"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/navigateUpBtn"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="0dp"
                app:backgroundTint="#16FFD700"
                app:cornerRadius="@dimen/_32sdp"
                app:icon="@drawable/ic_baseline_arrow_upward_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/gold"
                app:layout_constraintBottom_toBottomOf="@+id/save_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/save_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>